--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<title>N & LW Lawn Care - Landscaping Bootstrap4 HTML5 Responsive Template </title>
+	<title>Green Life awareness and climate promotion initiative</title>
 	<!-- Bootstrap core CSS -->
 	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<!-- Fontawesome CSS -->
@@ -84,22 +84,22 @@
                <!-- Slide One - Set the background image for this slide in the line below -->
                <div class="carousel-item active" style="background-image: url('images/slider-01.jpg')">
                   <div class="carousel-caption d-none d-md-block">
-                     <h3>Welcome to N & LW Lawn Care</h3>
-                     <p>A Great Theme For Garden Lawn Care</p>
+                     <h3>Welcome to Green Life awareness and climate promotion initiative</h3>
+                     <p>Protecting our native trees from extinction.</p>
                   </div>
                </div>
                <!-- Slide Two - Set the background image for this slide in the line below -->
                <div class="carousel-item" style="background-image: url('images/slider-02.jpg')">
                   <div class="carousel-caption d-none d-md-block">
-                     <h3>Beautiful Garden</h3>
+                     <h3>Welcome to Green Life awareness and climate promotion initiative</h3>
                      <p>A Great Theme For Garden Lawn Care</p>
                   </div>
                </div>
                <!-- Slide Three - Set the background image for this slide in the line below -->
                <div class="carousel-item" style="background-image: url('images/slider-03.jpg')">
                   <div class="carousel-caption d-none d-md-block">
-                     <h3>Welcome to N & LW Lawn Care</h3>
-                     <p>A Great Theme For Garden Lawn Care</p>
+                     <h3>Welcome to Green Life awareness and climate promotion initiative</h3>
+                     <p>Protecting our native trees from extinction.</p>
                   </div>
                </div>
             </div>
