--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
         </div>
     </header>
     <!-- Page Content -->
-    <div class="container bg-primary">
-        <!-- <div class="services-bar"> -->
-            <!-- <h1 class="my-4">Our Best Services </h1> -->
+    <div class="container ">
+        <div class="services-bar">
+            <h1 class="my-4">Our Best Services </h1>
             <!-- Services Section -->
-            <!-- <div class="row">
+            <div class="row">
                <div class="col-lg-4 mb-4">
                   <div class="card h-100">
                      <h4 class="card-header">Garden Fence</h4>
@@ -132,8 +132,8 @@
                         <a href="#" class="btn btn-primary">Learn More</a>
                      </div>
                   </div>
-               </div> -->
-               <!-- <div class="col-lg-4 mb-4">
+               </div>
+               <div class="col-lg-4 mb-4">
                   <div class="card h-100">
                      <h4 class="card-header">Garden Watering</h4>
                      <div class="card-img">
@@ -146,14 +146,14 @@
                         <a href="#" class="btn btn-primary">Learn More</a>
                      </div>
                   </div>
-               </div> -->
-               <!-- <div class="col-lg-4 mb-4">
+               </div>
+               <div class="col-lg-4 mb-4">
                   <div class="card h-100">
                      <h4 class="card-header">Garden Supplies</h4>
                      <div class="card-img">
                         <img class="img-fluid" src="images/services-img-03.jpg" alt="" />
-                     </div> -->
-                     <!-- <div class="card-body">
+                     </div>
+                     <div class="card-body">
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
                      </div>
                      <div class="card-footer">
@@ -161,9 +161,9 @@
                      </div>
                   </div>
                </div>
-            </div> -->
+            </div>
             <!-- /.row -->
-        <!-- </div> -->
+        </div>
         <!-- About Section -->
         <div class="about-main">
             <div class="row">
