--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
     <!-- Page Content -->
     <div class="container ">
         <div class="services-bar">
-            <h1 class="my-4">Our Best Services </h1>
+            <h1 class="my-4">About Us</h1>
             <!-- Services Section -->
-            <div class="row">
+            <!-- <div class="row">
                <div class="col-lg-4 mb-4">
                   <div class="card h-100">
                      <h4 class="card-header">Garden Fence</h4>
@@ -132,8 +132,8 @@
                         <a href="#" class="btn btn-primary">Learn More</a>
                      </div>
                   </div>
-               </div>
-               <div class="col-lg-4 mb-4">
+               </div> -->
+               <!-- <div class="col-lg-4 mb-4">
                   <div class="card h-100">
                      <h4 class="card-header">Garden Watering</h4>
                      <div class="card-img">
@@ -146,8 +146,8 @@
                         <a href="#" class="btn btn-primary">Learn More</a>
                      </div>
                   </div>
-               </div>
-               <div class="col-lg-4 mb-4">
+               </div> -->
+               <!-- <div class="col-lg-4 mb-4">
                   <div class="card h-100">
                      <h4 class="card-header">Garden Supplies</h4>
                      <div class="card-img">
@@ -160,8 +160,8 @@
                         <a href="#" class="btn btn-primary">Learn More</a>
                      </div>
                   </div>
-               </div>
-            </div>
+               </div> -->
+            <!-- </div> -->
             <!-- /.row -->
         </div>
         <!-- About Section -->
