--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
     </header>
     <!-- Page Content -->
     <div class="container ">
-        <div class="services-bar">
-            <h1 class="my-4">About Us</h1>
+        <!-- <div class="services-bar"> -->
+            <!-- <h1 class="my-4">About Us</h1> -->
             <!-- Services Section -->
             <!-- <div class="row">
                <div class="col-lg-4 mb-4">
@@ -163,9 +163,10 @@
                </div> -->
             <!-- </div> -->
             <!-- /.row -->
-        </div>
+        <!-- </div> -->
         <!-- About Section -->
         <div class="about-main">
+         <h1 class="my-4">About Us</h1>
             <div class="row">
                <div class="col-lg-6">
                   <h2>Welcome to Green Life awareness and climate promotion initiative</h2>
