--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
         <!-- </div> -->
         <!-- About Section -->
         <div class="about-main">
-         <h1 class="my-4">About Us</h1>
+         <!-- <h1 class="my-4">About Us</h1> -->
             <div class="row">
                <div class="col-lg-6">
-                  <h2>Welcome to Green Life awareness and climate promotion initiative</h2>
+                  <h2>About us</h2>
                   <p>Green Life awareness and climate promotion initiative is a non-governmental organisation dedicated to safeguarding our planet for future generations. </p>
                   <h5>Our smart approach</h5>
                   <ul>
