--- a/index.html
+++ b/index.html
@@ -170,16 +170,18 @@
             <div class="row">
                <div class="col-lg-6">
                   <h2>About us</h2>
-                  <p>Green Life awareness and climate promotion initiative is a non-governmental organisation dedicated to safeguarding our planet for future generations. </p>
+                  <p>Green Life awareness and climate promotion initiative is a non-governmental organisation dedicated to safeguarding our planet for future generations.
+                     WIth a focus on ecological restoration and carbon emissions, we are committed to preserving endangered species, revitalizing the ecosystem and reducing
+                  carbon emission for a more substainable future.</p>
                   <h5>Our smart approach</h5>
                   <ul>
-                     <li>Sed at tellus eu quam posuere mattis.</li>
-                     <li>Phasellus quis erat et enim laoreet posuere ac porttitor ipsum.</li>
-                     <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                     <li>Duis porttitor odio pellentesque mollis vulputate.</li>
-                     <li>Quisque ac eros non ex hendrerit vehicula.</li>
+                     <li>Ecological Restoration.</li>
+                     <li>Carbon Emissions Reduction.</li>
+                     <li>Endangered Species Preservations.</li>
+                     <li>Substainable Community Engagement.</li>
+                     <li>Research and Innovation.</li>
                   </ul>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id reprehenderit, quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.</p>
+                  <p>Green Life is dedicated to safeguarding the planet for future generation, promoting a more sustainable and environmetally concious world.</p>
                </div>
                <div class="col-lg-6">
                   <img class="img-fluid rounded" src="images/about-img.jpg" alt="" />
