--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                      <li>Substainable Community Engagement.</li>
                      <li>Research and Innovation.</li>
                   </ul>
-                  <p>Green Life is dedicated to safeguarding the planet for future generation, promoting a more sustainable and environmetally concious world.</p>
+                  <!-- <p>Green Life is dedicated to safeguarding the planet for future generation, promoting a more sustainable and environmetally concious world.</p> -->
                </div>
                <div class="col-lg-6">
                   <img class="img-fluid rounded" src="images/about-img.jpg" alt="" />
