--- a/index.html
+++ b/index.html
@@ -82,21 +82,21 @@
             </ol>
             <div class="carousel-inner" role="listbox">
                <!-- Slide One - Set the background image for this slide in the line below -->
-               <div class="carousel-item active" style="background-image: url('images/slider-01.jpg')">
+               <div class="carousel-item active" style="background-image: url('images/rafael.jpg')">
                   <div class="carousel-caption d-none d-md-block">
                      <h3>Welcome to Green Life awareness and climate promotion initiative</h3>
                      <p>Protecting our native trees from extinction.</p>
                   </div>
                </div>
                <!-- Slide Two - Set the background image for this slide in the line below -->
-               <div class="carousel-item" style="background-image: url('images/slider-02.jpg')">
+               <div class="carousel-item" style="background-image: url('images/niko-photos.jpg')">
                   <div class="carousel-caption d-none d-md-block">
                      <h3>Welcome to Green Life awareness and climate promotion initiative</h3>
                      <p>A Great Theme For Garden Lawn Care</p>
                   </div>
                </div>
                <!-- Slide Three - Set the background image for this slide in the line below -->
-               <div class="carousel-item" style="background-image: url('images/slider-03.jpg')">
+               <div class="carousel-item" style="background-image: url('images/nick-fewings.jpg')">
                   <div class="carousel-caption d-none d-md-block">
                      <h3>Welcome to Green Life awareness and climate promotion initiative</h3>
                      <p>Protecting our native trees from extinction.</p>
