--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                   <!-- <p>Green Life is dedicated to safeguarding the planet for future generation, promoting a more sustainable and environmetally concious world.</p> -->
                </div>
                <div class="col-lg-6">
-                  <img class="img-fluid rounded" src="images/about-img.jpg" alt="" />
+                  <img class="img-fluid rounded" src="images/environment.webp" alt="" />
                </div>
             </div>
             <!-- /.row -->
