--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<link href="css/all.css" rel="stylesheet">
 	<!-- Custom styles for this template -->
 	<link href="css/style.css" rel="stylesheet">
+   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+   
 </head>
 <body>
     <!-- Navigation -->
@@ -183,7 +185,7 @@
                   </ul>
                   <!-- <p>Green Life is dedicated to safeguarding the planet for future generation, promoting a more sustainable and environmetally concious world.</p> -->
                </div>
-               <div class="col-lg-6">
+               <div class="col-lg-6" data-aos="fade-down">
                   <img class="img-fluid rounded" src="images/environment.webp" alt="" />
                </div>
             </div>
@@ -399,5 +401,10 @@
 <!-- Bootstrap core JavaScript -->
 <script src="vendor/jquery/jquery.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
+
 </body>
 </html>
