--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<!-- Custom styles for this template -->
 	<link href="css/style.css" rel="stylesheet">
    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-   
+
 </head>
 <body>
     <!-- Navigation -->
@@ -167,10 +167,10 @@
             <!-- /.row -->
         <!-- </div> -->
         <!-- About Section -->
-        <div class="about-main">
+        <div class="about-main" >
          <!-- <h1 class="my-4">About Us</h1> -->
             <div class="row">
-               <div class="col-lg-6">
+               <div class="col-lg-6" data-aos="zoom-in-right">
                   <h2>About us</h2>
                   <p>Green Life awareness and climate promotion initiative is a non-governmental organisation dedicated to safeguarding our planet for future generations.
                      WIth a focus on ecological restoration and carbon emissions, we are committed to preserving endangered species, revitalizing the ecosystem and reducing
