--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <div class="about-main" >
          <!-- <h1 class="my-4">About Us</h1> -->
             <div class="row">
-               <div class="col-lg-6" data-aos="zoom-in-right">
+               <div class="col-lg-6" data-aos="fade-right">
                   <h2>About us</h2>
                   <p>Green Life awareness and climate promotion initiative is a non-governmental organisation dedicated to safeguarding our planet for future generations.
                      WIth a focus on ecological restoration and carbon emissions, we are committed to preserving endangered species, revitalizing the ecosystem and reducing
@@ -186,7 +186,7 @@
                   <!-- <p>Green Life is dedicated to safeguarding the planet for future generation, promoting a more sustainable and environmetally concious world.</p> -->
                </div>
                <div class="col-lg-6" data-aos="fade-down">
-                  <img class="img-fluid rounded" src="images/environment.webp" alt="" />
+                  <img class="img-fluid rounded" src="images/environment.jpg" alt="sustainable environment" />
                </div>
             </div>
             <!-- /.row -->
