home and about page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-light top-nav fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="logo" />
+            <!-- <img src="images/logo.png" alt="logo" /> -->
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="fas fa-bars"></span>
@@ -33,10 +33,11 @@
                   <li class="nav-item">
                      <a class="nav-link" href="about.html">About</a>
                   </li>
-                  <li class="nav-item">
+                  <!-- <li class="nav-item">
                      <a class="nav-link" href="services.html">Services</a>
-                  </li>
-                  <li class="nav-item dropdown">
+                  </li> -->
+
+                  <!-- <li class="nav-item dropdown">
                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      Portfolio
                      </a>
@@ -47,8 +48,8 @@
                         <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
                         <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
                      </div>
-                  </li>
-                  <li class="nav-item dropdown">
+                  </li> -->
+                  <!-- <li class="nav-item dropdown">
                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      Blog
                      </a>
@@ -57,8 +58,8 @@
                         <a class="dropdown-item" href="blog-home-2.html">Blog Home 2</a>
                         <a class="dropdown-item" href="blog-post.html">Blog Post</a>
                      </div>
-                  </li>
-                  <li class="nav-item dropdown">
+                  </li> -->
+                  <!-- <li class="nav-item dropdown">
                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      Pages
                      </a>
@@ -67,10 +68,10 @@
                         <a class="dropdown-item" href="404.html">404</a>
                         <a class="dropdown-item" href="pricing.html">Pricing Table</a>
                      </div>
-                  </li>
-                  <li class="nav-item">
+                  </li> -->
+                  <!-- <li class="nav-item">
                      <a class="nav-link" href="contact.html">Contact</a>
-                  </li>
+                  </li> -->
                </ul>
             </div>
         </div>
@@ -167,7 +168,7 @@
             <!-- /.row -->
         <!-- </div> -->
         <!-- About Section -->
-        <div class="about-main" >
+        <div class="about-main  my-5" >
          <!-- <h1 class="my-4">About Us</h1> -->
             <div class="row">
                <div class="col-lg-6" data-aos="fade-right">
@@ -186,7 +187,7 @@
                   <!-- <p>Green Life is dedicated to safeguarding the planet for future generation, promoting a more sustainable and environmetally concious world.</p> -->
                </div>
                <div class="col-lg-6" data-aos="fade-down">
-                  <img class="img-fluid rounded" src="images/environment.jpg" alt="sustainable environment" />
+                  <img class="img-fluid rounded" src="images/environment-white2.png" alt="sustainable environment" />
                </div>
             </div>
             <!-- /.row -->
@@ -199,13 +200,13 @@
                   <div class="card h-100">
                      <div class="card-img">
                         <a href="#">
-                           <img class="card-img-top" src="images/portfolio-img-01.jpg" alt="" />
+                           <img class="card-img-top" src="images/green1.jpg" alt="" />
                            <div class="overlay"><i class="fas fa-arrows-alt"></i></div>
                         </a>
                      </div>
                      <div class="card-body">
                         <h4 class="card-title">
-                           <a href="#">Lawn & garden care</a>
+                           <a href="#">GARDEN CARE</a>
                         </h4>
                      </div>
                   </div>
@@ -214,13 +215,13 @@
                   <div class="card h-100">
                      <div class="card-img">
                         <a href="#">
-                           <img class="card-img-top" src="images/portfolio-img-02.jpg" alt="" />
+                           <img class="card-img-top" src="images/daniel-vargas.jpg" alt="" />
                            <div class="overlay"><i class="fas fa-arrows-alt"></i></div>
                         </a>
                      </div>
                      <div class="card-body">
                         <h4 class="card-title">
-                           <a href="#">Lawn renovation</a>
+                           <a href="#">Protecting our Native Tree</a>
                         </h4>
                      </div>
                   </div>
@@ -229,7 +230,7 @@
                   <div class="card h-100">
                      <div class="card-img">
                         <a href="#">
-                           <img class="card-img-top" src="images/portfolio-img-03.jpg" alt="" />
+                           <img class="card-img-top" src="images/plantation.jpg" alt="" />
                            <div class="overlay"><i class="fas fa-arrows-alt"></i></div>
                         </a>
                      </div>
@@ -244,13 +245,13 @@
                   <div class="card h-100">
                      <div class="card-img">
                         <a href="#">
-                           <img class="card-img-top" src="images/portfolio-img-04.jpg" alt="" />
+                           <img class="card-img-top" src="images/growing plant.jpg" alt="" />
                            <div class="overlay"><i class="fas fa-arrows-alt"></i></div>
                         </a>
                      </div>
                      <div class="card-body">
                         <h4 class="card-title">
-                           <a href="#">Water Baganig</a>
+                           <a href="#">Growing Plant</a>
                         </h4>
                      </div>
                   </div>
@@ -259,13 +260,13 @@
                   <div class="card h-100">
                      <div class="card-img">
                         <a href="#">
-                           <img class="card-img-top" src="images/portfolio-img-05.jpg" alt="" />
+                           <img class="card-img-top" src="images/donation.jpg" alt="" />
                            <div class="overlay"><i class="fas fa-arrows-alt"></i></div>
                         </a>
                      </div>
                      <div class="card-body">
                         <h4 class="card-title">
-                           <a href="#">Growing plants</a>
+                           <a href="#">Donation</a>
                         </h4>
                      </div>
                   </div>
@@ -274,13 +275,13 @@
                   <div class="card h-100">
                      <div class="card-img">
                         <a href="#">
-                           <img class="card-img-top" src="images/portfolio-img-01.jpg" alt="" />
+                           <img class="card-img-top" src="images/green lectures.jpg" alt="" />
                            <div class="overlay"><i class="fas fa-arrows-alt"></i></div>
                         </a>
                      </div>
                      <div class="card-body">
                         <h4 class="card-title">
-                           <a href="#">Snow removal</a>
+                           <a href="#">Green Lectures</a>
                         </h4>
                      </div>
                   </div>
@@ -292,7 +293,7 @@
         <!-- Get In Touch Now Section -->
         <div class="row mb-4">
             <div class="col-md-8">
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
+               <p>We're a globally-minded organization that thrives on teamwork and partnerships. If you're passionate about saving the environment, we'd be delighted to explore ways to work together. Let's stay connected!</p>
             </div>
             <div class="col-md-4">
                <a class="btn btn-lg btn-secondary btn-block" href="#">Get In Touch Now</a>
@@ -307,10 +308,10 @@
                <div class="col-lg-3 col-md-6 col-sm-6 col">
 					<h5 class="headin5_amrc col_white_amrc pt2">Find us</h5>
 					<!--headin5_amrc-->
-					<p class="mb10">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-					<p><i class="fa fa-location-arrow"></i> 9878/25 sec 9 rohini 35 </p>
-					<p><i class="fa fa-phone"></i> +91-9999878398 </p>
-					<p><i class="fa fa fa-envelope"></i> info@example.com </p>
+					<p class="mb10">for your consultation and more about us, you can contact us:</p>
+					<p><i class="fa fa-location-arrow"></i> No. 9 Wada Aliyu Road, Off Ahmadu Bello Way, Nassarawa GRA, Kano State.</p>
+					<p><i class="fa fa-phone"></i> +234-7068692823</p>
+					<p><i class="fa fa fa-envelope"></i> greenislifeinitiative@gmail.com </p>
                </div>
                <div class="col-lg-3 col-md-6 col-sm-6 col">
 					<h5 class="headin5_amrc col_white_amrc pt2">Follow us</h5>
@@ -318,15 +319,19 @@
 					<ul class="footer_ul2_amrc">
 						<li>
 							<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-							<p>Lorem Ipsum is simply dummy printing...<a href="#">https://www.lipsum.com/</a></p>
+							<p><a href="https://twitter.com/greenlife">Twitter page</a></p>
 						</li>
 						<li>
-							<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-							<p>Lorem Ipsum is simply dummy printing...<a href="#">https://www.lipsum.com/</a></p>
+							<a href="#"><i class="fab fa-facebook-f fleft padding-right"></i> </a>
+							<p><a href="https://www.facebook.com/greenlife/"> Facebook page</a></p>
 						</li>
 						<li>
-							<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-							<p>Lorem Ipsum is simply dummy printing...<a href="#">https://www.lipsum.com/</a></p>
+							<a href="#"><i class="fab fa-instagram fleft padding-right"></i> </a>
+							<p><a href="https://www.instagram.com/greenlife/"> Instagram page</a></p>
+						</li>
+                  <li>
+							<a href="#"><i class="fab fa-linkedin fleft padding-right"></i> </a>
+							<p><a href="https://www.linkedin.com/greenlife">Linkedin page</a></p>
 						</li>
 					</ul>
 					<!--footer_ul2_amrc ends here-->
@@ -335,8 +340,8 @@
 					<h5 class="headin5_amrc col_white_amrc pt2">Quick links</h5>
 					<!--headin5_amrc-->
 					<ul class="footer_ul_amrc">
-						<li><a href="#">Default Version</a></li>
-						<li><a href="#">Boxed Version</a></li>
+						<!-- <li><a href="#">Default Version</a></li> -->
+						<!-- <li><a href="#">Boxed Version</a></li> -->
 						<li><a href="#">Our Team </a></li>
 						<li><a href="#">About Us</a></li>
 						<li><a href="#">Our Services</a></li>
@@ -346,33 +351,33 @@
 				</div>
 				<div class="col-lg-3 col-md-6 col-sm-6 ">
 					<h5 class="headin5_amrc col_white_amrc pt2">Recent posts</h5>
-					<!--headin5_amrc-->
+					<!-- headin5_amrc -->
 					<ul class="footer_ul_amrc">
 						<li class="media">
 							<div class="media-left">
-								<img class="img-fluid" src="images/post-img-01.jpg" alt="" />
+								<img class="img-fluid" src="images/green1.jpg" alt="" />
 							</div>
 							<div class="media-body">
-								<p>How to find best dog food?</p>
-								<span>22 Sep 2018</span>
+								<p> How to find best location for plantation</p>
+								<span>22 Sep 2022</span>
 							</div>
 						</li>
 						<li class="media">
 							<div class="media-left">
-								<img class="img-fluid" src="images/post-img-02.jpg" alt="" />
+								<img class="img-fluid" src="images/green lectures.jpg" alt="" />
 							</div>
 							<div class="media-body">
-								<p>How to find best dog food?</p>
-								<span>34 Sep 2018</span>
+								<p> Environmental Sustainability lectures in kano.</p>
+								<span>15 Oct 2023</span>
 							</div>
 						</li>
 						<li class="media">
 							<div class="media-left">
-								<img class="img-fluid" src="images/post-img-03.jpg" alt="" />
+								<img class="img-fluid" src="images/award.jpg" alt="" />
 							</div>
 							<div class="media-body">
-								<p>How to find best dog food?</p>
-								<span>30 Sep 2018</span>
+								<p> Presentation of award to the emir on Green Life awareness in Kano </p>
+								<span>Sep Jan 2024</span>
 							</div>
 						</li>
 					</ul>
@@ -382,11 +387,11 @@
 		</div>
         <div class="container">
             <div class="footer-logo">
-				<a href="#"><img src="images/footer-logo.png" alt="" /></a>
+				<!-- <a href="#"><img src="images/footer-logo.png" alt="" /></a> -->
 			</div>
             <!--foote_bottom_ul_amrc ends here-->
-            <p class="copyright text-center">All Rights Reserved. &copy; 2018 <a href="#">N & LW Lawn Care</a> Design By : 
-				<a href="https://html.design/">html design</a>
+            <p class="copyright text-center">All Rights Reserved. &copy; 2024 <a href="#">Green Life Awareness</a>
+                <!-- Design By : <a href="https://html.design/">html design</a> -->
             </p>
             <ul class="social_footer_ul">
 				<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
