--- a/about.html
+++ b/about.html
@@ -5,20 +5,22 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<title>N & LW Lawn Care - Landscaping Bootstrap4 HTML5 Responsive Template </title>
+	<title>Green Life awareness and climate promotion initiative</title>
 	<!-- Bootstrap core CSS -->
 	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<!-- Fontawesome CSS -->
 	<link href="css/all.css" rel="stylesheet">
 	<!-- Custom styles for this template -->
 	<link href="css/style.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
 </head>
 <body>
 	<!-- Navigation -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-light top-nav fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="logo" />
+            <!-- <img src="images/logo.png" alt="logo" /> -->
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="fas fa-bars"></span>
@@ -31,10 +33,10 @@
                   <li class="nav-item">
                      <a class="nav-link active" href="about.html">About</a>
                   </li>
-                  <li class="nav-item">
+                  <!-- <li class="nav-item">
                      <a class="nav-link" href="services.html">Services</a>
-                  </li>
-                  <li class="nav-item dropdown">
+                  </li> -->
+                  <!-- <li class="nav-item dropdown">
                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      Portfolio
                      </a>
@@ -45,8 +47,8 @@
                         <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
                         <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
                      </div>
-                  </li>
-                  <li class="nav-item dropdown">
+                  </li> -->
+                  <!-- <li class="nav-item dropdown">
                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      Blog
                      </a>
@@ -55,8 +57,8 @@
                         <a class="dropdown-item" href="blog-home-2.html">Blog Home 2</a>
                         <a class="dropdown-item" href="blog-post.html">Blog Post</a>
                      </div>
-                  </li>
-                  <li class="nav-item dropdown">
+                  </li> -->
+                  <!-- <li class="nav-item dropdown">
                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      Pages
                      </a>
@@ -65,10 +67,10 @@
                         <a class="dropdown-item" href="404.html">404</a>
                         <a class="dropdown-item" href="pricing.html">Pricing Table</a>
                      </div>
-                  </li>
-                  <li class="nav-item">
+                  </li> -->
+                  <!-- <li class="nav-item">
                      <a class="nav-link" href="contact.html">Contact</a>
-                  </li>
+                  </li> -->
                </ul>
             </div>
         </div>
@@ -78,7 +80,7 @@
 		<div class="container">
 			<!-- Page Heading/Breadcrumbs -->
 			<h1 class="mt-4 mb-3">About
-				<small>Subheading</small>
+				<small>Green Life Forever</small>
 			</h1>
 		</div>
 	</div>
@@ -96,13 +98,16 @@
 		<div class="about-main">
 			<div class="row">
 				<div class="col-lg-6">
-					<img class="img-fluid rounded mb-4" src="images/about-img.jpg" alt="" />
+					<img class="img-fluid rounded mb-4" src="images/environment-white2.png" alt="environmental sustainability" />
 				</div>
-				<div class="col-lg-6">
-					<h2>About Modern Business</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptate nihil eum consectetur similique? Consectetur, quod, incidunt, harum nisi dolores delectus reprehenderit voluptatem perferendis dicta dolorem non blanditiis ex fugiat.</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum voluptatum aut sequi impedit non velit ab ea pariatur sint quidem corporis eveniet. Odit, temporibus reprehenderit dolorum!</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
+				<div data-aos="zoom-in-left" class="col-lg-6">
+					<h2>About Green Life</h2>
+					<p>Green Life awareness and climate promotion initiative is a non-governmental organisation dedicated to safeguarding our planet for future generations.
+						WIth a focus on ecological restoration and carbon emissions, we are committed to preserving endangered species, revitalizing the ecosystem and reducing
+					 carbon emission for a more substainable future.</p>
+					<p>Raising awareness about climate change, conservation and sustainable living is our core objective. Other related activities include: Organising events, workshops, and campaigns to promote eco-friendly practice.</p>
+					<p>Sharing practical advice on protecting our native species, conserving resources and living more sustainably. Supporting initiatives that protect natural habitat, wildlife, and ecosystems.</p>
+					<p>The goal is to inspire individuals to make environmetally conscious choices and contribut to a more sustainable future. </p>
 				</div>
 			</div>
 			<!-- /.row -->
@@ -114,61 +119,61 @@
 			<div class="row">
 				<div class="col-lg-4 mb-4">
 				  <div class="card h-100 text-center">
-					<img class="card-img-top" src="images/team_01.jpg" alt="" />
+					<img class="card-img-top" src="images/usman.jpg" alt="" />
 					<div class="card-body">
-						<h4 class="card-title">Team Member</h4>
-						<h6 class="card-subtitle mb-2 text-muted">Position</h6>
-						<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
+						<h4 class="card-title">Usman S Karaye</h4>
+						<h6 class="card-subtitle mb-2 text-muted">Chairman Board of Directors</h6>
+						<p class="card-text">A Civil Engineer, with expertise in earthwork, utility intallations and sustainable project management. A passionate climate activist, working towards a greener, more sustainable future.</p>
 					</div>
-					<div class="card-footer">
+					<!-- <div class="card-footer">
 						<ul>
 							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
 							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
 							<li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
 						</ul>
-					</div>
+					</div> -->
 				  </div>
 				</div>
 				<div class="col-lg-4 mb-4">
 				  <div class="card h-100 text-center">
-					<img class="card-img-top" src="images/team_02.jpg" alt="" />
+					<img class="card-img-top" src="images/ibrahim.jpg" alt="" />
 					<div class="card-body">
-						<h4 class="card-title">Team Member</h4>
-						<h6 class="card-subtitle mb-2 text-muted">Position</h6>
-						<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
+						<h4 class="card-title"> Ibrahim M Habibu</h4>
+						<h6 class="card-subtitle mb-2 text-muted">Secretary General</h6>
+						<p class="card-text">A Zoologist with a passion for nature conservation, reforestation, and degreded land restoration. A strong advocate of environmental stewardship, with vast knowledge on maintaining ecological balance, supporting wildlife habitats and combating climate change..</p>
 					</div>
-					<div class="card-footer">
+					<!-- <div class="card-footer">
 						<ul>
 							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
 							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
 							<li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
 						</ul>
-					</div>
+					</div> -->
 				  </div>
 				</div>
 				<div class="col-lg-4 mb-4">
 				  <div class="card h-100 text-center">
-					<img class="card-img-top" src="images/team_03.jpg" alt="" />
+					<img class="card-img-top" src="images/barde (2).jpg" alt="" />
 					<div class="card-body">
-						<h4 class="card-title">Team Member</h4>
-						<h6 class="card-subtitle mb-2 text-muted">Position</h6>
-						<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
+						<h4 class="card-title">Usman A Barde</h4>
+						<h6 class="card-subtitle mb-2 text-muted">Member</h6>
+						<p class="card-text">A public administrator, business manager with expertise in private practice and administration. As a board member of Green Life awareness, Usama drives biodiversity growth and climate change campaign. </p>
 					</div>
-					<div class="card-footer">
+					<!-- <div class="card-footer">
 						<ul>
 							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
 							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
 							<li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
 						</ul>
-					</div>
+					</div> -->
 				  </div>
 				</div>
 			</div>
 			<!-- /.row -->
 		</div>
 		<!-- Our Customers -->
-		<div class="customers-box"> 
-			<h2>Our Customers</h2>
+		<!-- <div class="customers-box">  -->
+			<!-- <h2>Our Customers</h2>
 			<div class="row">
 				<div class="col-lg-2 col-sm-4 mb-4">
 				  <img class="img-fluid" src="images/logo_01.png" alt="" />
@@ -188,9 +193,9 @@
 				<div class="col-lg-2 col-sm-4 mb-4">
 				  <img class="img-fluid" src="images/logo_06.png" alt="" />
 				</div>
-			</div>
+			</div> -->
 			<!-- /.row -->
-		</div>
+		<!-- </div> -->
 		<!-- /.container -->
 	</div>
 
@@ -201,10 +206,10 @@
                <div class="col-lg-3 col-md-6 col-sm-6 col">
 					<h5 class="headin5_amrc col_white_amrc pt2">Find us</h5>
 					<!--headin5_amrc-->
-					<p class="mb10">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-					<p><i class="fa fa-location-arrow"></i> 9878/25 sec 9 rohini 35 </p>
-					<p><i class="fa fa-phone"></i> +91-9999878398 </p>
-					<p><i class="fa fa fa-envelope"></i> info@example.com </p>
+					<p class="mb10">for your consultation and more about us, you can contact us:</p>
+					<p><i class="fa fa-location-arrow"></i> No. 9 Wada Aliyu Road, Off Ahmadu Bello Way, Nassarawa GRA, Kano State.</p>
+					<p><i class="fa fa-phone"></i> +234-7068692823 </p>
+					<p><i class="fa fa fa-envelope"></i> greenislifeinitiative@gmail.com </p>
                </div>
                <div class="col-lg-3 col-md-6 col-sm-6 col">
 					<h5 class="headin5_amrc col_white_amrc pt2">Follow us</h5>
@@ -212,15 +217,19 @@
 					<ul class="footer_ul2_amrc">
 						<li>
 							<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-							<p>Lorem Ipsum is simply dummy printing...<a href="#">https://www.lipsum.com/</a></p>
+							<p><a href="#">Twitter page</a></p>
 						</li>
 						<li>
 							<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-							<p>Lorem Ipsum is simply dummy printing...<a href="#">https://www.lipsum.com/</a></p>
+							<p><a href="#">Facebook page</a></p>
 						</li>
 						<li>
 							<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
-							<p>Lorem Ipsum is simply dummy printing...<a href="#">https://www.lipsum.com/</a></p>
+							<p><a href="#">Instagram page</a></p>
+						</li>
+						<li>
+							<a href="#"><i class="fab fa-linkedin fleft padding-right"></i> </a>
+							<p><a href="https://www.linkedin.com/greenlife">Linkedin page</a></p>
 						</li>
 					</ul>
 					<!--footer_ul2_amrc ends here-->
@@ -229,12 +238,12 @@
 					<h5 class="headin5_amrc col_white_amrc pt2">Quick links</h5>
 					<!--headin5_amrc-->
 					<ul class="footer_ul_amrc">
-						<li><a href="#">Default Version</a></li>
-						<li><a href="#">Boxed Version</a></li>
+						<!-- <li><a href="#">Default Version</a></li> -->
+						<!-- <li><a href="#">Boxed Version</a></li> -->
 						<li><a href="#">Our Team </a></li>
 						<li><a href="#">About Us</a></li>
 						<li><a href="#">Our Services</a></li>
-						<li><a href="#">Get In Touch</a></li>
+						<li><a href="contact.html">Get In Touch</a></li>
 					</ul>
 					<!--footer_ul_amrc ends here-->
 				</div>
@@ -244,29 +253,29 @@
 					<ul class="footer_ul_amrc">
 						<li class="media">
 							<div class="media-left">
-								<img class="img-fluid" src="images/post-img-01.jpg" alt="" />
+								<img class="img-fluid" src="images/green1.jpg" alt="" />
 							</div>
 							<div class="media-body">
-								<p>How to find best dog food?</p>
-								<span>22 Sep 2018</span>
+								<p>How to find best location for plantation</p>
+								<span>22 Sep 2022</span>
 							</div>
 						</li>
 						<li class="media">
 							<div class="media-left">
-								<img class="img-fluid" src="images/post-img-02.jpg" alt="" />
+								<img class="img-fluid" src="images/green lectures.jpg" alt="" />
 							</div>
 							<div class="media-body">
-								<p>How to find best dog food?</p>
-								<span>34 Sep 2018</span>
+								<p>Environmental Sustainability lectures in kano.</p>
+								<span>15 Oct 2023</span>
 							</div>
 						</li>
 						<li class="media">
 							<div class="media-left">
-								<img class="img-fluid" src="images/post-img-03.jpg" alt="" />
+								<img class="img-fluid" src="images/award.jpg" alt="" />
 							</div>
 							<div class="media-body">
-								<p>How to find best dog food?</p>
-								<span>30 Sep 2018</span>
+								<p>Presentation of award to the emir on Green Life awareness in Kano </p>
+								<span>Sep Jan 2024</span>
 							</div>
 						</li>
 					</ul>
@@ -276,11 +285,11 @@
 		</div>
         <div class="container">
             <div class="footer-logo">
-				<a href="#"><img src="images/footer-logo.png" alt="" /></a>
+				<!-- <a href="#"><img src="images/footer-logo.png" alt="" /></a> -->
 			</div>
             <!--foote_bottom_ul_amrc ends here-->
-            <p class="copyright text-center">All Rights Reserved. &copy; 2018 <a href="#">N & LW Lawn Care</a> Design By : 
-				<a href="https://html.design/">html design</a>
+            <p class="copyright text-center">All Rights Reserved. &copy; 2024 <a href="#">Green Life Awareness</a>
+				 <!-- Design By : <a href="https://html.design/">html design</a> -->
             </p>
             <ul class="social_footer_ul">
 				<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
@@ -295,5 +304,8 @@
 <!-- Bootstrap core JavaScript -->
 <script src="vendor/jquery/jquery.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script>
+	AOS.init();
+  </script>
 </body>
 </html>
