--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
 				<div class="col-lg-6">
 					<img class="img-fluid rounded mb-4" src="images/environment-white2.png" alt="environmental sustainability" />
 				</div>
-				<div data-aos="zoom-in-left" class="col-lg-6">
+				<div class="col-lg-6">
 					<h2>About Green Life</h2>
 					<p>Green Life awareness and climate promotion initiative is a non-governmental organisation dedicated to safeguarding our planet for future generations.
 						WIth a focus on ecological restoration and carbon emissions, we are committed to preserving endangered species, revitalizing the ecosystem and reducing
