--- a/about.html
+++ b/about.html
@@ -12,7 +12,6 @@
 	<link href="css/all.css" rel="stylesheet">
 	<!-- Custom styles for this template -->
 	<link href="css/style.css" rel="stylesheet">
-	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
 </head>
 <body>
@@ -105,9 +104,9 @@
 					<p>Green Life awareness and climate promotion initiative is a non-governmental organisation dedicated to safeguarding our planet for future generations.
 						WIth a focus on ecological restoration and carbon emissions, we are committed to preserving endangered species, revitalizing the ecosystem and reducing
 					 carbon emission for a more substainable future.</p>
-					<p>Raising awareness about climate change, conservation and sustainable living is our core objective. Other related activities include: Organising events, workshops, and campaigns to promote eco-friendly practice.</p>
+					<p">Raising awareness about climate change, conservation and sustainable living is our core objective. Other related activities include: Organising events, workshops, and campaigns to promote eco-friendly practice.</p>
 					<p>Sharing practical advice on protecting our native species, conserving resources and living more sustainably. Supporting initiatives that protect natural habitat, wildlife, and ecosystems.</p>
-					<p>The goal is to inspire individuals to make environmetally conscious choices and contribut to a more sustainable future. </p>
+					<p >The goal is to inspire individuals to make environmetally conscious choices and contribut to a more sustainable future. </p>
 				</div>
 			</div>
 			<!-- /.row -->
@@ -304,8 +303,5 @@
 <!-- Bootstrap core JavaScript -->
 <script src="vendor/jquery/jquery.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script>
-	AOS.init();
-  </script>
 </body>
 </html>
