--- a/about.html
+++ b/about.html
@@ -219,11 +219,11 @@
 							<p><a href="#">Twitter page</a></p>
 						</li>
 						<li>
-							<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
+							<a href="#"><i class="fab fa-facebook fleft padding-right"></i> </a>
 							<p><a href="#">Facebook page</a></p>
 						</li>
 						<li>
-							<a href="#"><i class="fab fa-twitter fleft padding-right"></i> </a>
+							<a href="#"><i class="fab fa-instagram fleft padding-right"></i> </a>
 							<p><a href="#">Instagram page</a></p>
 						</li>
 						<li>
@@ -242,7 +242,7 @@
 						<li><a href="#">Our Team </a></li>
 						<li><a href="#">About Us</a></li>
 						<li><a href="#">Our Services</a></li>
-						<li><a href="contact.html">Get In Touch</a></li>
+						<li><a href="#">Get In Touch</a></li>
 					</ul>
 					<!--footer_ul_amrc ends here-->
 				</div>
