--- a/about.html
+++ b/about.html
@@ -219,7 +219,7 @@
 							<p><a href="#">Twitter page</a></p>
 						</li>
 						<li>
-							<a href="#"><i class="fab fa-facebook fleft padding-right"></i> </a>
+							<a href="#"><i class="fab fa-facebook-f fleft padding-right"></i> </a>
 							<p><a href="#">Facebook page</a></p>
 						</li>
 						<li>
